refactored employee page; add ModalWindowEdit; add ModalWindowDelete; add ModalWindowAddEmployee;

--- a/src/pages/Employees/Employess.sass
+++ b/src/pages/Employees/Employess.sass
@@ -4,3 +4,8 @@
   margin-top: 50px
   border: gray solid 2px
   padding: 5px
+  .btns
+    display: flex
+    justify-content: center
+    Button
+      width: 110px
