--- a/src/components/EmployeeItem/EmployeeItem.module.sass
+++ b/src/components/EmployeeItem/EmployeeItem.module.sass
@@ -1,24 +1,43 @@
-.container
-  display: flex
-  border-bottom: black solid 1px
-  margin-bottom: 5px
-  .fullName
-    width: 150px
+.main
+  .container
     display: flex
-    flex-direction: column
-    margin-right: 10px
-  .information
+    border-bottom: black solid 1px
+    margin-bottom: 5px
+    .fullName
+      width: 150px
+      display: flex
+      flex-direction: column
+      margin-right: 10px
+    .information
+      display: flex
+      flex-direction: column
+      span
+        margin-bottom: 5px
+    .editBtns
+      div
+        margin-left: 5px
+        margin-bottom: 5px
+        width: 18px
+        height: 18px
+        //background-image: url("../../imgs/box_edit-512.png")
+        //background-repeat: no-repeat
+        //background-size: 18px 18px
+        cursor: pointer
+    .deleteBtns
+      div
+        margin-left: 5px
+        margin-bottom: 5px
+        width: 18px
+        height: 18px
+        //background-image: url("../../imgs/trash.png")
+        //background-repeat: no-repeat
+        //background-size: 18px 18px
+        cursor: pointer
+
+.modal
+  .b
     display: flex
-    flex-direction: column
-    span
-      margin-bottom: 5px
-  .btns
-    div
-      margin-left: 5px
-      margin-bottom: 5px
-      width: 18px
-      height: 18px
-      background-image: url("../../imgs/box_edit-512.png")
-      background-repeat: no-repeat
-      background-size: 18px 18px
+    button
+      margin: 5px
       cursor: pointer
+
